[project]
name = "marimo-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo>=0.19.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pydantic-ai>=1.56.0",
]
